<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Main!</string>
    <string name="app_name">AndTroin</string>
    <string name="new_list">New List</string>
    <string name="edit_list">Edit List</string>
    <string name="delete_list">Delete List</string>
    <string name="import_list">Import List</string>
    <string name="schedule">Schedule</string>
    <string name="generic_error">Error!</string>
    <string name="list_exists">A list with this name exists already!</string>
    <string name="ok">OK</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="sort_by_source">Sort by Source</string>
    <string name="sort_by_target">Sort by Target</string>
    <string name="add_entry">Add Entry</string>
    <string name="search_entry">Search Entry</string>
    <string name="by_source">By Source</string>
    <string name="by_target">By Target</string>
    <string name="unknown_list">The list does not seem to exist!</string>
    <string name="no_list_available">No lists available!</string>
    <string name="ignore">Ignore</string>
    <string name="edit">Edit</string>
    <string name="off">Off</string>
    <string name="back_without_function">BACK key without function</string>
    <string name="correct_answer">Correct</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="delete_schedule">Delete Schedule</string>
    <string name="no_external_files">Unable to find external files directory.</string>
    <string name="file_not_found">Unable to find selected file.</string>
    <string name="new_challenge">New Challenge</string>
    <string name="new_peers">Review possible peers entries</string>
    <string name="click_2_start_challenge">Click to Start Challenge</string>
    <string name="click_2_start_peer_review">Click to Review Peers</string>
    <string name="success">Success!</string>
    <string name="failure">Failed!</string>
    <string name="add_sourcedenomination">Add Source Denomination</string>
    <string name="add_targetdenomination">Add Target Denomination</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_changes">Save Changes?</string>
    <string name="delete_entry2">Delete Entry?</string>
    <string name="delete_list2">Delete List?</string>
    <string name="invalid_entry">Entry is invalid: Discard changes?</string>
    <string name="delete_denomination">Delete Denomination</string>
    <string name="delete_denomination2">Delete Denomination?</string>
    <string name="edit_denomination">Edit Denomination</string>
    <string name="invalid_denomination">Denomination is invalid: Discard changes?</string>
    <string name="add_detail">Add Detail</string>
    <string name="add_example">Add Example</string>
    <string name="edit_detail">Edit Detail</string>
    <string name="delete_detail">Delete Detail</string>
    <string name="edit_example">Edit Example</string>
    <string name="delete_example">Delete Example</string>
    <string name="delete_example2">Delete Example?</string>
    <string name="edit_detailskeys">Edit Details Keys</string>
    <string name="add_sourcedetailskey">Add Source Details Key</string>
    <string name="add_targetdetailskey">Add Target Details Key</string>
    <string name="edit_detailskey">Edit Details Key</string>
    <string name="delete_detailskey">Delete Details Key</string>
    <string name="delete_detailskey2">Delete Details Key?</string>
    <string name="add_detailskeyvalue">Add Details Key Value</string>
    <string name="edit_detailskeyvalue">Edit Details Key Value</string>
    <string name="delete_detailskeyvalue">Delete Details Key Value</string>
    <string name="no_detailskeys_available">No Details Keys available!</string>
    <string name="delete_detail2">Delete Detail?</string>
    <string name="choose_list">Choose List</string>
    <string name="cancel">Cancel</string>
    <string name="delete_detailskeyvalue2">Delete Details Key Value?</string>
    <string name="invalid_detailskey">Details Key is invalid: Discard changes?</string>
    <string name="select_file_for_import">Select File containing List</string>
    <string name="select_for_import">Select for Import</string>
    <string name="enter_directory">Enter Directory</string>
    <string name="error_change_dir">Unable to change directory!</string>
    <string name="error_open_file">Unable to open File!</string>
    <string name="items_per_day">Items per Day</string>
    <string name="items_per_series">Items per Series</string>
    <string name="remove_schedule">Remove Schedule</string>
    <string name="delete_schedule2">Delete Schedule?</string>
    <string name="details_keys">Details Keys</string>
    <string name="source_denominations">Source Denominations</string>
    <string name="target_denominations">Target Denominations</string>
    <string name="details">Details</string>
    <string name="examples">Examples</string>
    <string name="values">Values</string>
    <string name="more">More ...</string>
    <string name="clone_entry">Clone Entry</string>
    <string name="clone_denomination">Clone Denomination</string>
    <string name="clone_denominationform">Clone Denomination Form</string>
    <string name="categories">Categories</string>
    <string name="add_category">Add Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="delete_category">Delete Category</string>
    <string name="delete_category2">Delete Category?</string>
    <string name="gotolist">Go to List</string>
    <string name="goto_andtroin">Goto Andtroin</string>
    <string name="andtroin_main">AndTroinMain</string>
    <string name="preferences">Preferences</string>
    <string name="exercise">Exercise</string>
    <string name="exercise2">Enable periodic Exercising of Scheduled Lists</string>
    <string name="help">Help</string>
    <string name="help2">Show Help Dialog when Entering a Screen</string>
    <string name="help_andtroinactivity">Thanks for installing AndTroin! While studying at the college for my interpreter\'s degree, I used the very same algorithm to memorise very (VERY) large vocabulary lists and soon wrote a desktop application to make life easier for myself. With something like Android, I thought something like AndTroin was needed, so here it is. I really hope you like it and would love to get feedback!\nIf you want to disable dialogs showing up on entering a screen, just go to \&quot;Preferences\&quot;.</string>
    <string name="help_listactivity">This screen gives you an overview of your list. Each entry can have several source and target denominations, that is, words in each language denominating that very item referred to by that entry.\nThen you can create categories like \&quot;noun\&quot; or \&quot;verb\&quot; or also topic-related stuff like \&quot;hunting\&quot; or whatever you might want to associate with the entries in your list. When you edit an entry, you can assign these categories to it.\nYou can also create so-called details keys, that is, information you might want to associate with denominations (not with entries). A meaningful details key to be used in association with verbs would be for example \&quot;transitivity\&quot; with the values \&quot;transitive\&quot; and \&quot;intransitive\&quot;.\nApart from that, long-clicking on a list entry will bring up a very self-explanatory context menu, and pressing the menu button will bring up an equally self-explanatory options menu. There you can also schedule your list for exercising. The whole scheduling mechanism is rather complex, so suffice it to say that I recommend that you choose something between 10 and 30 entries per series and day to be scheduled for a given list.\nAs a rule of thumb, you should set up your schedule in the evening (or whatever moment during the day you have time to study) because schedule setup time will be when you\&apos;ll be confronted with the bulk of exercises (try it out to see what I mean). Never go to sleep on a day with any exercises pending, or else you\&apos;ll fall behind.</string>
    <string name="help_denominationactivity">Here you can add or edit a denomination for a given entry. Pressing the menu button will bring up an options menu that lets you select details to be added to your denomination or enter example phrases showing the denomination in context. Long-clicking on a list entry will bring up a very self-explanatory context menu.</string>
    <string name="help_detailskeyactivity">Here you can add or edit details keys. Pressing the menu button will bring up a menu that allows you to add new possible values to your details key. Long-clicking on an existing value will bring up an options menu that allows you to delete that value again.</string>
    <string name="help_entryactivity">This screen allows you to show, add or edit the source and target denominations associated with a given entry. Long-clicking on a list item will bring up a self-explanatory context menu and pressing the menu button will bring up an equally self-explanatory options menu.</string>
    <string name="help_fileactivity">There are two valid input formats: 1) Plain text files consist of an even number of lines, where the first line is an entry in the source language and the second line is an entry in the target language. 2) JSON Files are are the same format as what\&apos;s produced when you export your own lists; so try it out!</string>
    <string name="value">Value</string>
    <string name="source_language">Source Language</string>
    <string name="target_language">Target Language</string>
    <string name="name">Name</string>
    <string name="select_for_import_flat">Select for Import (Flat)</string>
    <string name="select_for_import_json">Select for Import (JSON)</string>
    <string name="export_list">Export List</string>
    <string name="export_into_current">Export into current directory</string>
    <string name="filename">File Name</string>
    <string name="find_peers">Find Peers</string>
    <string name="merge">Merge</string>
    <string name="no_peers_found">No peers found!</string>
    <string name="entry_not_exists_create">No entry matches your input: Create new entry?</string>
    <string name="add_source_form_key">Add Source Form Key</string>
    <string name="add_target_form_key">Add Target Form Key</string>
    <string name="source_form_keys">Source Form Keys</string>
    <string name="target_form_keys">Target Form Keys</string>
    <string name="edit_formkey">Edit Form Key</string>
    <string name="delete_formkey">Delete Form Key</string>
    <string name="delete_formkey2">Delete Form Key?</string>
    <string name="add_form">Add form</string>
    <string name="add_formkey">Add Form Key</string>
    <string name="forms">Forms</string>
    <string name="edit_form">Edit Form</string>
    <string name="delete_form">Delete Form</string>
    <string name="delete_form2">Delete Form?</string>
    <string name="invalid_denomination_form">Form is invalid: Discard changes?</string>
    <string name="existing_list">Existing List</string>
    <string name="merge_yes">Are you sure to merge the two entries into one?</string>
    <string name="merge_no">Are you sure NOT to merge the two entries into one?</string>
    <string name="choose">Choose</string>
    <string name="select_for_import_binary">Select for Import (Binary)</string>
    <string name="purchase_lists">Purchase Lists</string>
    <string name="purchase_list">Purchase List</string>
    <string name="purchase">Purchase</string>
    <string name="cancelled">Cancelled</string>
    <string name="refunded">Refunded</string>
    <string name="test_http">Test HTTP</string>
    <string name="peek">Peek</string>
</resources>
