<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/linlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:layout_weight="50">
            <TextView android:layout_width="wrap_content" android:id="@+id/textView1" android:text="@string/source_language" android:layout_height="wrap_content"></TextView>
            <Spinner android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/spinner_sourceLanguage"></Spinner>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linlayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:layout_weight="50">
            <TextView android:layout_width="wrap_content" android:id="@+id/textView2" android:text="@string/target_language" android:layout_height="wrap_content"></TextView>
            <Spinner android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/spinner_targetLanguage"></Spinner>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:orientation="vertical">
        <TextView android:id="@+id/textView3" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/name"></TextView>
        <org.kohaerenzstiftung.EditText android:text="" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/edittext_listname">
            <requestFocus></requestFocus>
        </org.kohaerenzstiftung.EditText>
    </LinearLayout>
    <LinearLayout android:layout_height="match_parent" android:id="@+id/linearLayout1" android:layout_width="match_parent" android:orientation="horizontal">
        <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="50" android:id="@+id/button_ok" android:text="@string/ok" android:enabled="false"></Button>
        <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="50" android:id="@+id/button_cancel" android:text="@string/cancel"></Button>
    </LinearLayout>
    
</LinearLayout>
